docs/.vitepress/theme/custom.css
.custom-block-title {
  display: none;
}

.custom-block {
  background-color: hsl(197, 37%, 96%) !important;
  color: var(--c-text) !important;
  position: relative;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  border-width: 4px !important;
  overflow-x: visible !important;
}

.custom-block a {
  color: var(--c-brand) !important;
}

.custom-block.info::before, .custom-block.tip::before, .custom-block.warning::before, .custom-block.danger::before {
  border-radius: 100%;
  color: #fff;
  font-size: 14px;
  left: -12px;
  line-height: 20px;
  position: absolute;
  height: 20px;
  width: 20px;
  text-align: center;
  top: 14px;
}

.custom-block.info {
  border-color: var(--c-info);
}

.custom-block.info::before {
  background-color: var(--c-info);
  content: "i";
  font-weight: 700;
}

.custom-block.tip {
  border-color: var(--c-tip);
}

.custom-block.tip::before {
  background-color: var(--c-tip);
  content: "?";
  font-weight: 700;
}

.custom-block.warning {
  border-color: var(--c-warning);
}

.custom-block.warning::before {
  background-color: var(--c-warning);
  content: "▲";
  font-weight: 700;
}

.custom-block.danger {
  border-color: var(--c-danger);
}
.custom-block.danger::before {
  background-color: var(--c-danger);
  content: "!";
  font-weight: 700;
}

.nav-bar-title .logo {
  height: 1.8rem !important;
}

:root {
  --c-brand: #5e58e8;
  --c-brand-light: #7e77f4;
  --c-info: #322ba8;
  --c-tip: #008b15;
  --c-warning: #c7a500;
  --c-danger: #c80425;
}

